--- a/Jenny.html
+++ b/Jenny.html
@@ -253,14 +253,14 @@ h4 span:first-child {
                 <div class="position">
                     Junior SW Application Test Engineer
                 </div>
+				<li class="bullet">Using python script to help APP testing flow more smoothly and efficiently</li>
+				<li class="bullet">Cooperate with New York headquarters to ensure and maintain test plan</li>
                 <div class="summary">
                     <p></p>
                 <br>
                 </div>
-                <h4>Android based product- Peloton Guide</h4>
+                <h4>Peloton Guide</h4>
                 <ul class="highlights">
-                    <li class="bullet">Using python script to help APP testing flow more smoothly and efficiently</li>
-                    <li class="bullet">Cooperate with New York headquarters to ensure and maintain test plan</li>
                     <li class="bullet">Camera-movement tracker/machine learing test</li>
                     <li class="bullet">AI voice recongnition test</li>
                     <li class="bullet">Streaming test</li>
@@ -275,9 +275,7 @@ h4 span:first-child {
                 <h4>Peloton Bike/ Peloton Tread</h4>
                 <ul class="highlights">
                     <li class="bullet"></li>
-                    <li class="bullet">Using python script to help APP testing flow more smoothly and efficiently</li>
                     <li class="bullet">Working closely with developers to debug and validate new features</li>
-                    <li class="bullet">Cooperate with New York headquarters to complete testing project</li>
                     <li class="bullet">System integration test- Firmware</li>
                     <li class="bullet">App regression test</li>
         
