--- a/Jenny.html
+++ b/Jenny.html
@@ -261,7 +261,7 @@ h4 span:first-child {
                 </div>
                 <h4>Peloton Guide</h4>
                 <ul class="highlights">
-                    <li class="bullet">Camera-movement tracker/machine learing test</li>
+                    <li class="bullet">Camera-movement tracker/ Machine learing test</li>
                     <li class="bullet">AI voice recongnition test</li>
                     <li class="bullet">Streaming test</li>
                 
