--- a/Jenny.html
+++ b/Jenny.html
@@ -243,11 +243,11 @@ h4 span:first-child {
 
         <div class="col-sm-16">
             <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-14">
                 <h4 class="strike-through">
                     <span>Peloton Interactive, Inc.</span>
                     <span class="date">
-                        2020-07-01 — present
+                        2020-07-01 — present test
                     </span>
                 </h4>
                 <div class="position">
