--- a/Jenny.html
+++ b/Jenny.html
@@ -250,6 +250,21 @@ h4 span:first-child {
                         2020-07-01 — present test
                     </span>
                 </h4>
+
+				<div class="position">
+                    Software Development in Test
+                </div>
+				<span class="date">
+                        2022-03-01 — present test
+                    </span>
+				<li class="bullet">Customized build automation  JenkinsCI lab for Android apps and system builds testing</li>
+				<li class="bullet">Develope an integrated testing flow for system build testing</li>
+				<li class="bullet">Designe and execute end-to-end automated tests for the entire product, including Android tablet and sensor firmware</li>
+                <div class="summary">
+                    <p></p>
+                <br>
+
+
                 <div class="position">
                     Junior SW Application Test Engineer
                 </div>
