main: Updated main: Added main: Removed

--- a/Jenny.html
+++ b/Jenny.html
@@ -251,12 +251,13 @@ h4 span:first-child {
                     </span>
                 </h4>
 
-				<div class="position">
-                    Software Development in Test
-                </div>
-				<span class="date">
-                        2022-03-01 — present test
+
+				<h5 class="strike-through">
+                    <span>Software Development in Test</span>
+                    <span class="date">
+                        2022-03-01 — presen
                     </span>
+                </h5>
 				<li class="bullet">Customized build automation  JenkinsCI lab for Android apps and system builds testing</li>
 				<li class="bullet">Develope an integrated testing flow for system build testing</li>
 				<li class="bullet">Designe and execute end-to-end automated tests for the entire product, including Android tablet and sensor firmware</li>
