--- a/Jenny.html
+++ b/Jenny.html
@@ -252,6 +252,7 @@ h4 span:first-child {
 
 				<h5 class="strike-through">
                     <span>Software Development in Test</span>
+					<ul class="highlights"></ul>
                     <span class="date">
                         2022-03-01 — presen
                     </span>
@@ -267,6 +268,7 @@ h4 span:first-child {
                 <div class="position">
                     Junior SW Application Test Engineer
                 </div>
+				<ul class="highlights"></ul>
 				<li class="bullet">Used python script to help APP testing flow more smoothly and efficiently</li>
 				<li class="bullet">Cooperated with New York headquarters to ensure and maintain test plan</li>
                 <div class="summary">
@@ -274,7 +276,6 @@ h4 span:first-child {
                 <br>
                 </div>
                 <h4>Peloton Guide</h4>
-                <ul class="highlights">
                     <li class="bullet">Camera-movement tracker and machine learing test</li>
                     <li class="bullet">AI voice recongnition test</li>
                     <li class="bullet">Streaming test</li>
@@ -287,7 +288,6 @@ h4 span:first-child {
                     <p></p>
                 </div>
                 <h4>Peloton Bike/ Peloton Tread</h4>
-                <ul class="highlights">
                     <li class="bullet"></li>
                     <li class="bullet">Worked closely with developers to debug and validate new features</li>
                     <li class="bullet">System integration test- Firmware</li>
