--- a/Jenny.html
+++ b/Jenny.html
@@ -250,13 +250,12 @@ h4 span:first-child {
 				<br>
 
 
-				<h5 class="strike-through">
+				<div class="position">
                     <span>Software Development in Test</span>
-					<ul class="highlights"></ul>
                     <span class="date">
-                        2022-03-01 — presen
+                        2022-03-01 — present
                     </span>
-                </h5>
+                </div>
 				<li class="bullet">Customized build automation  JenkinsCI lab for Android apps and system builds testing</li>
 				<li class="bullet">Develope an integrated testing flow for system build testing</li>
 				<li class="bullet">Designe and execute end-to-end automated tests for the entire product, including Android tablet and sensor firmware</li>
@@ -268,14 +267,15 @@ h4 span:first-child {
                 <div class="position">
                     Junior SW Application Test Engineer
                 </div>
-				<ul class="highlights"></ul>
 				<li class="bullet">Used python script to help APP testing flow more smoothly and efficiently</li>
 				<li class="bullet">Cooperated with New York headquarters to ensure and maintain test plan</li>
                 <div class="summary">
                     <p></p>
                 <br>
-                </div>
+                <div class="position">
                 <h4>Peloton Guide</h4>
+				</div>
+                <ul class="highlights">
                     <li class="bullet">Camera-movement tracker and machine learing test</li>
                     <li class="bullet">AI voice recongnition test</li>
                     <li class="bullet">Streaming test</li>
@@ -286,8 +286,10 @@ h4 span:first-child {
 
                 <div class="summary">
                     <p></p>
-                </div>
+                <div class="position">
                 <h4>Peloton Bike/ Peloton Tread</h4>
+				</div>
+                <ul class="highlights">
                     <li class="bullet"></li>
                     <li class="bullet">Worked closely with developers to debug and validate new features</li>
                     <li class="bullet">System integration test- Firmware</li>
