--- a/Jenny.html
+++ b/Jenny.html
@@ -106,6 +106,7 @@ h4 span:first-child {
 #work .position,
 #volunteer .position {
 	font-weight: bold;
+	font-size: 20px;
 	margin-bottom: 8px;
 }
 #education .area {
