--- a/Jenny.html
+++ b/Jenny.html
@@ -103,10 +103,13 @@ h4 span:first-child {
 #profiles .network {
 	text-transform: capitalize;
 }
-#work .position,
+#work .position  {
+	font-weight: bold;
+    font-size: 18px;
+	margin-bottom: 8px;
+}
 #volunteer .position {
 	font-weight: bold;
-	font-size: 20px;
 	margin-bottom: 8px;
 }
 #education .area {
@@ -266,8 +269,12 @@ h4 span:first-child {
 
 
                 <div class="position">
-                    Junior SW Application Test Engineer
+					<span>Junior SW Application Test Engineer</span>
+                    <span class="date">
+                        2020-07-01 — 2022-03-01
+                    </span>
                 </div>
+
 				<li class="bullet">Used python script to help APP testing flow more smoothly and efficiently</li>
 				<li class="bullet">Cooperated with New York headquarters to ensure and maintain test plan</li>
                 <div class="summary">
