--- a/Jenny.html
+++ b/Jenny.html
@@ -105,7 +105,7 @@ h4 span:first-child {
 }
 #work .position  {
 	font-weight: bold;
-    font-size: 18px;
+    font-size: 16px;
 	margin-bottom: 8px;
 }
 #volunteer .position {
@@ -173,8 +173,11 @@ h4 span:first-child {
 		font-size: 26px;
 	}
 	.date {
-		font-size: 14px;
+		font-size: 12px;
 		margin-bottom: 5px;
+        font-weight: 700;
+        opacity: 0.25;
+        margin: 0;
 	}
 	.strike-through span:first-child {
 		margin-bottom: 7px;
