--- a/Jenny.html
+++ b/Jenny.html
@@ -237,7 +237,6 @@ h4 span:first-child {
 		</aside>
 		<div class="col-sm-9">
 			<li class="bullet">Versed in python tool to assist working flow<li></li>
-			<li class="bullet">Looking forward to working under closely cooperating workplace<li>
 			<li class="bullet">Highly motivated, collaborate work task independently and efficiently
 		</div>
 	</section>
@@ -256,13 +255,12 @@ h4 span:first-child {
                 </h4>
 				<br>
 
-
-				<div class="position">
+				<h4 class="position">
                     <span>Software Development in Test</span>
                     <span class="date">
                         2022-03-01 — present
                     </span>
-                </div>
+                </h4>
 				<li class="bullet">Customized build automation  JenkinsCI lab for Android apps and system builds testing</li>
 				<li class="bullet">Develope an integrated testing flow for system build testing</li>
 				<li class="bullet">Designe and execute end-to-end automated tests for the entire product, including Android tablet and sensor firmware</li>
@@ -271,12 +269,12 @@ h4 span:first-child {
                 <br>
 
 
-                <div class="position">
+                <h4 class="position">
 					<span>Junior SW Application Test Engineer</span>
                     <span class="date">
                         2020-07-01 — 2022-03-01
                     </span>
-                </div>
+                </h4>
 
 				<li class="bullet">Used python script to help APP testing flow more smoothly and efficiently</li>
 				<li class="bullet">Cooperated with New York headquarters to ensure and maintain test plan</li>
