--- a/Jenny.html
+++ b/Jenny.html
@@ -175,6 +175,7 @@ h4 span:first-child {
 	.date {
 		font-size: 12px;
 		margin-bottom: 5px;
+		padding-right: 20px;
         font-weight: 700;
         opacity: 0.25;
         margin: 0;
