--- a/Jenny.html
+++ b/Jenny.html
@@ -173,12 +173,10 @@ h4 span:first-child {
 		font-size: 26px;
 	}
 	.date {
-		font-size: 12px;
-		margin-bottom: 5px;
-		padding-right: 20px;
-        font-weight: 700;
-        opacity: 0.25;
-        margin: 0;
+		font-size: 14px;
+		margin-top: -10px;
+		padding-left: 20px;
+		right: 0;
 	}
 	.strike-through span:first-child {
 		margin-bottom: 7px;
