--- a/Jenny.html
+++ b/Jenny.html
@@ -105,7 +105,7 @@ h4 span:first-child {
 }
 #work .position  {
 	font-weight: bold;
-    font-size: 16px;
+    font-size: 14px;
 	margin-bottom: 8px;
 }
 #volunteer .position {
@@ -254,7 +254,7 @@ h4 span:first-child {
                 </h4>
 				<br>
 
-				<h4 class="position">
+				<h4 class="strike-through">
                     <span>Software Development in Test</span>
                     <span class="date">
                         2022-03-01 — present
@@ -268,7 +268,7 @@ h4 span:first-child {
                 <br>
 
 
-                <h4 class="position">
+                <h4 class="strike-through">
 					<span>Junior SW Application Test Engineer</span>
                     <span class="date">
                         2020-07-01 — 2022-03-01
@@ -335,6 +335,8 @@ h4 span:first-child {
                     <li>Jira</li>
                     <li>TestRail</li>
 					<li>Github</li>
+					<li>Docker</li>
+					<li>Raspberry Pi</li>
 
 
 				</ul>
