--- a/Jenny.html
+++ b/Jenny.html
@@ -96,6 +96,10 @@ h4 span:first-child {
 	font-size: 26px;
 	margin-top: -4px;
 }
+#content h4 {
+	font-size: 26px;
+	margin-top: -4px;
+}
 #content aside {
 	text-align: right;
 	padding-right: 30px;
@@ -105,7 +109,7 @@ h4 span:first-child {
 }
 #work .position  {
 	font-weight: bold;
-    font-size: 14px;
+    font-size: 16px;
 	margin-bottom: 8px;
 }
 #volunteer .position {
@@ -330,13 +334,13 @@ h4 span:first-child {
 					<li>Python</li>
 					<li>UiAutomator2</li>
 					<li>RobotFramework</li>
-					<li>Selenium</li>
 					<li>Jenkins</li>
-                    <li>Jira</li>
-                    <li>TestRail</li>
 					<li>Github</li>
 					<li>Docker</li>
 					<li>Raspberry Pi</li>
+					<li>Selenium</li>
+					<li>Jira</li>
+                    <li>TestRail</li>
 
 
 				</ul>
