--- a/Jenny.html
+++ b/Jenny.html
@@ -96,10 +96,6 @@ h4 span:first-child {
 	font-size: 26px;
 	margin-top: -4px;
 }
-#content h4 {
-	font-size: 26px;
-	margin-top: -4px;
-}
 #content aside {
 	text-align: right;
 	padding-right: 30px;
@@ -109,7 +105,7 @@ h4 span:first-child {
 }
 #work .position  {
 	font-weight: bold;
-    font-size: 16px;
+    font-size: 14px;
 	margin-bottom: 8px;
 }
 #volunteer .position {
@@ -284,9 +280,7 @@ h4 span:first-child {
                 <div class="summary">
                     <p></p>
                 <br>
-                <div class="position">
-                <h4>Peloton Guide</h4>
-				</div>
+                <div class="position">Peloton Guide</div>
                 <ul class="highlights">
                     <li class="bullet">Camera-movement tracker and machine learing test</li>
                     <li class="bullet">AI voice recongnition test</li>
@@ -298,9 +292,7 @@ h4 span:first-child {
 
                 <div class="summary">
                     <p></p>
-                <div class="position">
-                <h4>Peloton Bike/ Peloton Tread</h4>
-				</div>
+                <div class="position">Peloton Bike/ Peloton Tread</div>
                 <ul class="highlights">
                     <li class="bullet"></li>
                     <li class="bullet">Worked closely with developers to debug and validate new features</li>
