--- a/Jenny.html
+++ b/Jenny.html
@@ -255,17 +255,18 @@ h4 span:first-child {
 				<br>
 
 				<h4 class="strike-through">
-                    <span>Software Development in Test</span>
+                    <span>Software Development Engineer in Test</span>
                     <span class="date">
                         2022-03-01 — present
                     </span>
                 </h4>
-				<li class="bullet">Customized build automation  JenkinsCI lab for Android apps and system builds testing</li>
-				<li class="bullet">Develope an integrated testing flow for system build testing</li>
+				<li class="bullet">Customized automation Jenkins CI lab for Android apps and system builds testing</li>
+				<li class="bullet">Develop an integrated testing flow for system build testing</li>
 				<li class="bullet">Designe and execute end-to-end automated tests for the entire product, including Android tablet and sensor firmware</li>
                 <div class="summary">
                     <p></p>
                 <br>
+				<br>
 
                 <h4 class="strike-through">
 					<span>Junior SW Application Test Engineer</span>
@@ -274,7 +275,8 @@ h4 span:first-child {
                     </span>
                 </h4>
 				<li class="bullet">Used python script to help APP testing flow more smoothly and efficiently</li>
-				<li class="bullet">Cooperated with New York headquarters to ensure and maintain test plan</li>
+				<li class="bullet">Design and develop test suites for new feature</li>
+				<li class="bullet">Cooperated with New York headquarters to track and debug new feature</li>
                 <div class="summary">
                     <p></p>
                 <br>
