--- a/Jenny.html
+++ b/Jenny.html
@@ -260,9 +260,10 @@ h4 span:first-child {
                         2022-03-01 — present
                     </span>
                 </h4>
-				<li class="bullet">Customized automation Jenkins CI lab for Android apps and system builds testing</li>
+				<li class="bullet">Customized automation Jenkins CI lab for android Apps and system builds testing</li>
 				<li class="bullet">Develop an integrated testing flow for system build testing</li>
-				<li class="bullet">Designe and execute end-to-end automated tests for the entire product, including Android tablet and sensor firmware</li>
+				<li class="bullet">Execute and design end-to-end automated tests for the entire product, including Android tablet and sensor firmware</li>
+				<li class="bullet">Setup performance test for new project, and cooperate with Back-end team to present the data on website</li>
                 <div class="summary">
                     <p></p>
                 <br>
