--- a/Jenny.html
+++ b/Jenny.html
@@ -263,7 +263,7 @@ h4 span:first-child {
 				<li class="bullet">Customized automation Jenkins CI lab for android Apps and system builds testing</li>
 				<li class="bullet">Develop an integrated testing flow for system build testing</li>
 				<li class="bullet">Execute and design end-to-end automated tests for the entire product, including Android tablet and sensor firmware</li>
-				<li class="bullet">Setup performance test for new project, and cooperate with Back-end team to present the data on website</li>
+				<li class="bullet">Setup performance test for new project, and upload data to google sheet to track status</li>
                 <div class="summary">
                     <p></p>
                 <br>
@@ -275,7 +275,7 @@ h4 span:first-child {
                         2020-07-01 — 2022-03-01
                     </span>
                 </h4>
-				<li class="bullet">Used python script to help APP testing flow more smoothly and efficiently</li>
+				<li class="bullet">Used python script to help App testing flow more smoothly and efficiently</li>
 				<li class="bullet">Design and develop test suites for new feature</li>
 				<li class="bullet">Cooperated with New York headquarters to track and debug new feature</li>
                 <div class="summary">
