--- a/Jenny.html
+++ b/Jenny.html
@@ -260,10 +260,10 @@ h4 span:first-child {
                         2022-03-01 — present
                     </span>
                 </h4>
-				<li class="bullet">Customized automation Jenkins CI lab for android Apps and system builds testing</li>
-				<li class="bullet">Develop an integrated testing flow for system build testing</li>
+				<li class="bullet">Set up automation Jenkins CI lab for android Apps and system builds test flows</li>
+				<li class="bullet">Design an integrated testing flow for system build testing</li>
 				<li class="bullet">Execute and design end-to-end automated tests for the entire product, including Android tablet and sensor firmware</li>
-				<li class="bullet">Setup performance test for new project, and upload data to google sheet to track status</li>
+				<li class="bullet">Build up performance test flow, and customize backend API to integrate automation test workflows</li>
                 <div class="summary">
                     <p></p>
                 <br>
